Custom--app/main/default/objects/Status_Tags__c/Status_Tags__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is to hold the  status test tags</description>
    <label>Status Tags</label>
</CustomObject>