Custom--app/main/default/objects/Status_Tags__c/fields/Attempting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Attempting_Contact__c</fullName>
    <defaultValue>"Attempting Contact"</defaultValue>
    <label>Attempting Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>