Custom--app/main/default/objects/Status_Tags__c/fields/Awaiting_Eviction_Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_Eviction_Court_Date__c</fullName>
    <defaultValue>"Awaiting Eviction Court Date"</defaultValue>
    <label>Awaiting Eviction Court Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>