Custom--app/main/default/objects/Status_Tags__c/fields/BK__c.field-meta.xml
<CustomField>
    <fullName>BK__c</fullName>
    <defaultValue>"BK"</defaultValue>
    <label>BK</label>
    <length>2</length>
    <type>Text</type>
</CustomField>