Custom--app/main/default/objects/Status_Tags__c/fields/BKS_PostAcq_BK_Resolved__c.field-meta.xml
<CustomField>
    <fullName>BKS_PostAcq_BK_Resolved__c</fullName>
    <defaultValue>"PostAcq BK Resolved"</defaultValue>
    <label>BKS PostAcq BK Resolved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>