Custom--app/main/default/objects/Status_Tags__c/fields/BKS_PostAcq_BK_Unresolved__c.field-meta.xml
<CustomField>
    <fullName>BKS_PostAcq_BK_Unresolved__c</fullName>
    <defaultValue>"PostAcq BK Unresolved"</defaultValue>
    <label>BKS PostAcq BK Unresolved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>