Custom--app/main/default/objects/Status_Tags__c/fields/CFK_Agreed_with_Occupant__c.field-meta.xml
<CustomField>
    <fullName>CFK_Agreed_with_Occupant__c</fullName>
    <defaultValue>"CFK Agreed with Occupant"</defaultValue>
    <label>CFK Agreed with Occupant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>