Custom--app/main/default/objects/Status_Tags__c/fields/CFK_Check_given_to_Driver__c.field-meta.xml
<CustomField>
    <fullName>CFK_Check_given_to_Driver__c</fullName>
    <defaultValue>"CFK Check given to Driver"</defaultValue>
    <label>CFK Check given to Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>