Custom--app/main/default/objects/Status_Tags__c/fields/CFK_Check_Requested_from_Finance__c.field-meta.xml
<CustomField>
    <fullName>CFK_Check_Requested_from_Finance__c</fullName>
    <defaultValue>"CFK Check Requested from Finance"</defaultValue>
    <label>CFK Check Requested from Finance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>