Custom--app/main/default/objects/Status_Tags__c/fields/CFK_Deal_Aborted__c.field-meta.xml
<CustomField>
    <fullName>CFK_Deal_Aborted__c</fullName>
    <defaultValue>"CFK Negotiations Cancelled"</defaultValue>
    <label>CFK Deal Aborted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>