Custom--app/main/default/objects/Status_Tags__c/fields/CFK_In_Process__c.field-meta.xml
<CustomField>
    <fullName>CFK_In_Process__c</fullName>
    <defaultValue>"CFK In Process"</defaultValue>
    <label>CFK In Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>