Custom--app/main/default/objects/Status_Tags__c/fields/CFK_Moved_Out__c.field-meta.xml
<CustomField>
    <fullName>CFK_Moved_Out__c</fullName>
    <defaultValue>"Moved Out"</defaultValue>
    <label>CFK Moved Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>