Custom--app/main/default/objects/Status_Tags__c/fields/CFK_Unsuccessful_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>CFK_Unsuccessful_Negotiation__c</fullName>
    <defaultValue>"CFK Unsuccessful Negotiation"</defaultValue>
    <label>CFK Unsuccessful Negotiation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>