Custom--app/main/default/objects/Status_Tags__c/fields/Contacted_In_Process__c.field-meta.xml
<CustomField>
    <fullName>Contacted_In_Process__c</fullName>
    <defaultValue>"Contacted - In Process"</defaultValue>
    <label>Contacted - In Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>