Custom--app/main/default/objects/Status_Tags__c/fields/Deed_Not_Yet_Received__c.field-meta.xml
<CustomField>
    <fullName>Deed_Not_Yet_Received__c</fullName>
    <defaultValue>"Deed Not Yet Received"</defaultValue>
    <label>Deed Not Yet Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>