Custom--app/main/default/objects/Status_Tags__c/fields/Deed_Received__c.field-meta.xml
<CustomField>
    <fullName>Deed_Received__c</fullName>
    <defaultValue>"Deed Received"</defaultValue>
    <label>Deed Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>