Custom--app/main/default/objects/Status_Tags__c/fields/Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assigned__c</fullName>
    <defaultValue>"Driver Assigned"</defaultValue>
    <label>Driver Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>