Custom--app/main/default/objects/Status_Tags__c/fields/DS_Deed_Not_Yet_Received__c.field-meta.xml
<CustomField>
    <fullName>DS_Deed_Not_Yet_Received__c</fullName>
    <defaultValue>"Deed Not Yet Received"</defaultValue>
    <label>DS Deed Not Yet Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>