Custom--app/main/default/objects/Status_Tags__c/fields/DS_Deed_Received__c.field-meta.xml
<CustomField>
    <fullName>DS_Deed_Received__c</fullName>
    <defaultValue>"Deed Received"</defaultValue>
    <label>DS Deed Received</label>
    <length>255</length>
    <type>Text</type>
</CustomField>