Custom--app/main/default/objects/Status_Tags__c/fields/DS_Deed_Recorded__c.field-meta.xml
<CustomField>
    <fullName>DS_Deed_Recorded__c</fullName>
    <defaultValue>"Deed Recorded"</defaultValue>
    <label>DS Deed Recorded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>