Custom--app/main/default/objects/Status_Tags__c/fields/DS_TBD__c.field-meta.xml
<CustomField>
    <fullName>DS_TBD__c</fullName>
    <defaultValue>"TBD"</defaultValue>
    <label>DS TBD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>