Custom--app/main/default/objects/Status_Tags__c/fields/ES_Awaiting_Constable_Lock__c.field-meta.xml
<CustomField>
    <fullName>ES_Awaiting_Constable_Lock__c</fullName>
    <defaultValue>"Awaiting Constable Lock"</defaultValue>
    <label>ES Awaiting Constable Lock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>