Custom--app/main/default/objects/Status_Tags__c/fields/ES_Awaiting_Eviction_Writ__c.field-meta.xml
<CustomField>
    <fullName>ES_Awaiting_Eviction_Writ__c</fullName>
    <defaultValue>"Awaiting Eviction Writ"</defaultValue>
    <label>ES Awaiting Eviction Writ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>