Custom--app/main/default/objects/Status_Tags__c/fields/ES_Constable_Lock_Complete__c.field-meta.xml
<CustomField>
    <fullName>ES_Constable_Lock_Complete__c</fullName>
    <defaultValue>"Constable Lock Complete"</defaultValue>
    <label>ES Constable Lock Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>