Custom--app/main/default/objects/Status_Tags__c/fields/ES_Eviction_Aborted__c.field-meta.xml
<CustomField>
    <fullName>ES_Eviction_Aborted__c</fullName>
    <defaultValue>"Eviction Cancelled"</defaultValue>
    <label>ES Eviction Aborted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>