Custom--app/main/default/objects/Status_Tags__c/fields/ES_Eviction_In_Process__c.field-meta.xml
<CustomField>
    <fullName>ES_Eviction_In_Process__c</fullName>
    <defaultValue>"Eviction in Process"</defaultValue>
    <label>ES Eviction In Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>