Custom--app/main/default/objects/Status_Tags__c/fields/ES_Initial_Eviction_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>ES_Initial_Eviction_Notice_Sent__c</fullName>
    <defaultValue>"Initial Eviction Notice Sent"</defaultValue>
    <label>ES Initial Eviction Notice Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>