Custom--app/main/default/objects/Status_Tags__c/fields/ES_Recommended_for_Eviction__c.field-meta.xml
<CustomField>
    <fullName>ES_Recommended_for_Eviction__c</fullName>
    <defaultValue>"Recommended for Eviction"</defaultValue>
    <label>ES Recommended for Eviction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>