Custom--app/main/default/objects/Status_Tags__c/fields/ES_Referred_to_Eviction_Attorney__c.field-meta.xml
<CustomField>
    <fullName>ES_Referred_to_Eviction_Attorney__c</fullName>
    <defaultValue>"Referred to Eviction Attorney"</defaultValue>
    <label>ES Referred to Eviction Attorney</label>
    <length>255</length>
    <type>Text</type>
</CustomField>