Custom--app/main/default/objects/Status_Tags__c/fields/Eviction_Complete__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Complete__c</fullName>
    <defaultValue>"Eviction Complete"</defaultValue>
    <label>Eviction Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>