Custom--app/main/default/objects/Status_Tags__c/fields/Eviction_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Eviction_Letter_Sent__c</fullName>
    <defaultValue>"Eviction Letter Sent"</defaultValue>
    <label>Eviction Letter Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>