Custom--app/main/default/objects/Status_Tags__c/fields/FurtherContactAborted_ReferredToEviction__c.field-meta.xml
<CustomField>
    <fullName>FurtherContactAborted_ReferredToEviction__c</fullName>
    <defaultValue>"Further Contact Aborted - Referred to Eviction"</defaultValue>
    <label>FurtherContactAborted-ReferredToEviction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>