Custom--app/main/default/objects/Status_Tags__c/fields/ICS_1st_Notice_Left__c.field-meta.xml
<CustomField>
    <fullName>ICS_1st_Notice_Left__c</fullName>
    <defaultValue>"1st Notice Left"</defaultValue>
    <label>ICS 1st Notice Left</label>
    <length>255</length>
    <type>Text</type>
</CustomField>