Custom--app/main/default/objects/Status_Tags__c/fields/ICS_Contact_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>ICS_Contact_On_Hold__c</fullName>
    <defaultValue>'Contact On Hold'</defaultValue>
    <label>ICS Contact On Hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>