Custom--app/main/default/objects/Status_Tags__c/fields/ICS_InitialContactNegotiation_in_Process__c.field-meta.xml
<CustomField>
    <fullName>ICS_InitialContactNegotiation_in_Process__c</fullName>
    <defaultValue>"Initial Contact - Negotiation in Process"</defaultValue>
    <label>ICS InitialContactNegotiation in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>