Custom--app/main/default/objects/Status_Tags__c/fields/ICS_Referred_for_3rd_Party_Door_Knock__c.field-meta.xml
<CustomField>
    <fullName>ICS_Referred_for_3rd_Party_Door_Knock__c</fullName>
    <defaultValue>"Referred for 3rd Party Door Knock"</defaultValue>
    <label>ICS Referred for 3rd Party Door Knock</label>
    <length>255</length>
    <type>Text</type>
</CustomField>