Custom--app/main/default/objects/Status_Tags__c/fields/In_Contact__c.field-meta.xml
<CustomField>
    <fullName>In_Contact__c</fullName>
    <defaultValue>"In Contact"</defaultValue>
    <label>In Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>