Custom--app/main/default/objects/Status_Tags__c/fields/In_Process__c.field-meta.xml
<CustomField>
    <fullName>In_Process__c</fullName>
    <defaultValue>"In Process"</defaultValue>
    <label>In Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>