Custom--app/main/default/objects/Status_Tags__c/fields/Initial_Contact_Negotiation_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Negotiation_in_Process__c</fullName>
    <defaultValue>"Initial Contact - Negotiation in Process"</defaultValue>
    <label>Initial Contact - Negotiation in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>