Custom--app/main/default/objects/Status_Tags__c/fields/Lease_Marketing_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Lease_Marketing_in_Process__c</fullName>
    <defaultValue>"Lease Marketing in Process"</defaultValue>
    <label>Lease Marketing in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>