Custom--app/main/default/objects/Status_Tags__c/fields/Lease_Submitted_for_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Lease_Submitted_for_Underwriting__c</fullName>
    <defaultValue>"Lease Submitted for Underwriting"</defaultValue>
    <label>Lease Submitted for Underwriting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>