Custom--app/main/default/objects/Status_Tags__c/fields/Lease_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>Lease_Under_Review__c</fullName>
    <defaultValue>"Lease Under Review"</defaultValue>
    <label>Lease Under Review</label>
    <length>255</length>
    <type>Text</type>
</CustomField>