Custom--app/main/default/objects/Status_Tags__c/fields/Lease_Underwriting_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Lease_Underwriting_Rejected__c</fullName>
    <defaultValue>"Lease Underwriting Rejected"</defaultValue>
    <label>Lease Underwriting Rejected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>