Custom--app/main/default/objects/Status_Tags__c/fields/Leased__c.field-meta.xml
<CustomField>
    <fullName>Leased__c</fullName>
    <defaultValue>"Leased"</defaultValue>
    <label>Leased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>