Custom--app/main/default/objects/Status_Tags__c/fields/LS_Lease_Negotiations_in_Process__c.field-meta.xml
<CustomField>
    <fullName>LS_Lease_Negotiations_in_Process__c</fullName>
    <defaultValue>"Lease Negotiations in Process"</defaultValue>
    <label>LS Lease Negotiations in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>