Custom--app/main/default/objects/Status_Tags__c/fields/LS_Lease_Submitted_for_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>LS_Lease_Submitted_for_Underwriting__c</fullName>
    <defaultValue>"Lease Submitted for Underwriting"</defaultValue>
    <label>LS Lease Submitted for Underwriting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>