Custom--app/main/default/objects/Status_Tags__c/fields/LS_Leasing_In_Process__c.field-meta.xml
<CustomField>
    <fullName>LS_Leasing_In_Process__c</fullName>
    <defaultValue>"Leasing in Process"</defaultValue>
    <label>LS Leasing in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>