Custom--app/main/default/objects/Status_Tags__c/fields/LS_Rent_Ready__c.field-meta.xml
<CustomField>
    <fullName>LS_Rent_Ready__c</fullName>
    <defaultValue>"Rent Ready"</defaultValue>
    <label>LS Rent Ready</label>
    <length>255</length>
    <type>Text</type>
</CustomField>