Custom--app/main/default/objects/Status_Tags__c/fields/LS_Underwriting_Approved__c.field-meta.xml
<CustomField>
    <fullName>LS_Underwriting_Approved__c</fullName>
    <defaultValue>"Underwriting Approved"</defaultValue>
    <label>LS Underwriting Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>