Custom--app/main/default/objects/Status_Tags__c/fields/Moved_Out__c.field-meta.xml
<CustomField>
    <fullName>Moved_Out__c</fullName>
    <defaultValue>"Moved Out"</defaultValue>
    <label>Moved Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>