Custom--app/main/default/objects/Status_Tags__c/fields/Moved_Out_Rehab_Ready__c.field-meta.xml
<CustomField>
    <fullName>Moved_Out_Rehab_Ready__c</fullName>
    <defaultValue>"Moved Out - Rehab Ready"</defaultValue>
    <label>Moved Out - Rehab Ready</label>
    <length>255</length>
    <type>Text</type>
</CustomField>