Custom--app/main/default/objects/Status_Tags__c/fields/New_Lease_Underwriting_Approved__c.field-meta.xml
<CustomField>
    <fullName>New_Lease_Underwriting_Approved__c</fullName>
    <defaultValue>"New Lease - Underwriting Approved"</defaultValue>
    <label>New Lease - Underwriting Approved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>