Custom--app/main/default/objects/Status_Tags__c/fields/New_Lease_Underwriting_Rejected__c.field-meta.xml
<CustomField>
    <fullName>New_Lease_Underwriting_Rejected__c</fullName>
    <defaultValue>"New Lease - Underwriting Rejected"</defaultValue>
    <label>New Lease - Underwriting Rejected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>