Custom--app/main/default/objects/Status_Tags__c/fields/NewLeaseNegotiationsEndedUnsuccessfully__c.field-meta.xml
<CustomField>
    <fullName>NewLeaseNegotiationsEndedUnsuccessfully__c</fullName>
    <defaultValue>"New Lease Negotiations Ended Unsuccessfully"</defaultValue>
    <label>NewLeaseNegotiationsEndedUnsuccessfully</label>
    <length>255</length>
    <type>Text</type>
</CustomField>