Custom--app/main/default/objects/Status_Tags__c/fields/Occupied__c.field-meta.xml
<CustomField>
    <fullName>Occupied__c</fullName>
    <defaultValue>"Occupied"</defaultValue>
    <label>Occupied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>