Custom--app/main/default/objects/Status_Tags__c/fields/Occupied_TIP__c.field-meta.xml
<CustomField>
    <fullName>Occupied_TIP__c</fullName>
    <defaultValue>"Occupied - TIP"</defaultValue>
    <label>Occupied - TIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>