Custom--app/main/default/objects/Status_Tags__c/fields/OS_C_Occupied_Leased__c.field-meta.xml
<CustomField>
    <fullName>OS_C_Occupied_Leased__c</fullName>
    <defaultValue>"Occupied - Leased"</defaultValue>
    <label>OS-C Occupied - Leased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>