Custom--app/main/default/objects/Status_Tags__c/fields/OS_C_Occupied_TIP__c.field-meta.xml
<CustomField>
    <fullName>OS_C_Occupied_TIP__c</fullName>
    <defaultValue>"Occupied - TIP"</defaultValue>
    <label>OS-C Occupied - TIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>