Custom--app/main/default/objects/Status_Tags__c/fields/OSAQ_Purchased_Rented__c.field-meta.xml
<CustomField>
    <fullName>OSAQ_Purchased_Rented__c</fullName>
    <defaultValue>"Purchased Rented"</defaultValue>
    <label>OSAQ Purchased Rented</label>
    <length>255</length>
    <type>Text</type>
</CustomField>