Custom--app/main/default/objects/Status_Tags__c/fields/OSAQ_Unknown__c.field-meta.xml
<CustomField>
    <fullName>OSAQ_Unknown__c</fullName>
    <defaultValue>"Unknown"</defaultValue>
    <label>OSAQ Unknown</label>
    <length>255</length>
    <type>Text</type>
</CustomField>