Custom--app/main/default/objects/Status_Tags__c/fields/OSAQ_Vacant__c.field-meta.xml
<CustomField>
    <fullName>OSAQ_Vacant__c</fullName>
    <defaultValue>"Vacant"</defaultValue>
    <label>OSAQ Vacant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>