Custom--app/main/default/objects/Status_Tags__c/fields/PANS_BK__c.field-meta.xml
<CustomField>
    <fullName>PANS_BK__c</fullName>
    <defaultValue>"BK"</defaultValue>
    <label>PANS BK</label>
    <length>2</length>
    <type>Text</type>
</CustomField>