Custom--app/main/default/objects/Status_Tags__c/fields/PANS_Refer_to_Rehab__c.field-meta.xml
<CustomField>
    <fullName>PANS_Refer_to_Rehab__c</fullName>
    <defaultValue>"Refer to Rehab"</defaultValue>
    <label>PANS Refer to Rehab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>