Custom--app/main/default/objects/Status_Tags__c/fields/PostAcq_BK_Resolved__c.field-meta.xml
<CustomField>
    <fullName>PostAcq_BK_Resolved__c</fullName>
    <defaultValue>"PostAcq BK Resolved"</defaultValue>
    <label>PostAcq BK Resolved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>