Custom--app/main/default/objects/Status_Tags__c/fields/PreAcq_BK__c.field-meta.xml
<CustomField>
    <fullName>PreAcq_BK__c</fullName>
    <defaultValue>"PreAcq BK"</defaultValue>
    <label>PreAcq BK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>