Custom--app/main/default/objects/Status_Tags__c/fields/Prior_Lease_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lease_Accepted__c</fullName>
    <defaultValue>"Prior Lease Accepted"</defaultValue>
    <label>Prior Lease Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>