Custom--app/main/default/objects/Status_Tags__c/fields/Prior_Lease_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lease_Rejected__c</fullName>
    <defaultValue>"Prior Lease Rejected"</defaultValue>
    <label>Prior Lease Rejected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>