Custom--app/main/default/objects/Status_Tags__c/fields/Prior_Lease_Submitted_for_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Prior_Lease_Submitted_for_Underwriting__c</fullName>
    <defaultValue>"Prior Lease Submitted for Underwriting"</defaultValue>
    <label>Prior Lease Submitted for Underwriting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>