Custom--app/main/default/objects/Status_Tags__c/fields/PS_Newly_Acquired__c.field-meta.xml
<CustomField>
    <fullName>PS_Newly_Acquired__c</fullName>
    <defaultValue>"Newly Acquired"</defaultValue>
    <label>PS Newly Acquired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>