Custom--app/main/default/objects/Status_Tags__c/fields/Ready_for_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Rehab__c</fullName>
    <defaultValue>"Ready for Rehab"</defaultValue>
    <label>Ready for Rehab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>