Custom--app/main/default/objects/Status_Tags__c/fields/Recommended_for_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Recommended_for_Eviction__c</fullName>
    <defaultValue>"Recommended for Eviction"</defaultValue>
    <label>Recommended for Eviction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>