Custom--app/main/default/objects/Status_Tags__c/fields/Rehab_Complete__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Complete__c</fullName>
    <defaultValue>"Rehab Complete"</defaultValue>
    <label>Rehab Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>