Custom--app/main/default/objects/Status_Tags__c/fields/Rehab_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Rehab_in_Process__c</fullName>
    <defaultValue>"Rehab in Process"</defaultValue>
    <label>Rehab in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>