Custom--app/main/default/objects/Status_Tags__c/fields/Rent_Ready__c.field-meta.xml
<CustomField>
    <fullName>Rent_Ready__c</fullName>
    <defaultValue>"Rent Ready"</defaultValue>
    <label>Rent Ready</label>
    <length>255</length>
    <type>Text</type>
</CustomField>