Custom--app/main/default/objects/Status_Tags__c/fields/RS_No_Rehab_Completed__c.field-meta.xml
<CustomField>
    <fullName>RS_No_Rehab_Completed__c</fullName>
    <defaultValue>"No Rehab Completed"</defaultValue>
    <label>RS No Rehab Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>