Custom--app/main/default/objects/Status_Tags__c/fields/RS_Ready_for_Rehab__c.field-meta.xml
<CustomField>
    <fullName>RS_Ready_for_Rehab__c</fullName>
    <defaultValue>"Ready for Rehab"</defaultValue>
    <label>RS Ready for Rehab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>