Custom--app/main/default/objects/Status_Tags__c/fields/RS_Rehab_in_Process__c.field-meta.xml
<CustomField>
    <fullName>RS_Rehab_in_Process__c</fullName>
    <defaultValue>"Rehab in Process"</defaultValue>
    <label>RS Rehab in Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>