Custom--app/main/default/objects/Status_Tags__c/fields/RS_Rekey_Complete__c.field-meta.xml
<CustomField>
    <fullName>RS_Rekey_Complete__c</fullName>
    <defaultValue>"Rekey Complete"</defaultValue>
    <label>RS Rekey Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>