Custom--app/main/default/objects/Status_Tags__c/fields/RS_Waiting_for_Rekey__c.field-meta.xml
<CustomField>
    <fullName>RS_Waiting_for_Rekey__c</fullName>
    <defaultValue>"Waiting for Rekey"</defaultValue>
    <label>RS Waiting for Rekey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>