Custom--app/main/default/objects/Status_Tags__c/fields/TIP__c.field-meta.xml
<CustomField>
    <fullName>TIP__c</fullName>
    <defaultValue>"TIP"</defaultValue>
    <label>TIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>