Custom--app/main/default/objects/Status_Tags__c/fields/TIPS_Attempting_Contact__c.field-meta.xml
<CustomField>
    <fullName>TIPS_Attempting_Contact__c</fullName>
    <defaultValue>"Attempting Contact"</defaultValue>
    <label>TIPS Attempting Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>