Custom--app/main/default/objects/Status_Tags__c/fields/TIPS_Contacted_In_Process__c.field-meta.xml
<CustomField>
    <fullName>TIPS_Contacted_In_Process__c</fullName>
    <defaultValue>"Contacted - In Process"</defaultValue>
    <label>TIPS Contacted - In Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>