Custom--app/main/default/objects/Status_Tags__c/fields/TIPS_NoContactInternalAssignmentInProces__c.field-meta.xml
<CustomField>
    <fullName>TIPS_NoContactInternalAssignmentInProces__c</fullName>
    <defaultValue>"No Contact - Internal Assignment in Process"</defaultValue>
    <label>TIPS NoContactInternalAssignmentinProces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>