Custom--app/main/default/objects/Status_Tags__c/fields/TIPS_Non_TIP_Property__c.field-meta.xml
<CustomField>
    <fullName>TIPS_Non_TIP_Property__c</fullName>
    <defaultValue>"Non TIP Property"</defaultValue>
    <label>TIPS Non TIP Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>