Custom--app/main/default/objects/Status_Tags__c/fields/TLS_New_Lease_Negotiations_Underway__c.field-meta.xml
<CustomField>
    <fullName>TLS_New_Lease_Negotiations_Underway__c</fullName>
    <defaultValue>"New Lease Negotiations Underway"</defaultValue>
    <label>TLS New Lease Negotiations Underway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>