Custom--app/main/default/objects/Status_Tags__c/fields/TLS_New_Lease_Signed__c.field-meta.xml
<CustomField>
    <fullName>TLS_New_Lease_Signed__c</fullName>
    <defaultValue>"New Lease Signed"</defaultValue>
    <label>TLS New Lease Signed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>