Custom--app/main/default/objects/Status_Tags__c/fields/TLS_New_Lease_Submitted_for_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>TLS_New_Lease_Submitted_for_Underwriting__c</fullName>
    <defaultValue>"New Lease Submitted for Underwriting"</defaultValue>
    <label>TLS New Lease Submitted for Underwriting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>