Custom--app/main/default/objects/Status_Tags__c/fields/TLS_NewLeaseNegotiationsEndedUnsuccessfu__c.field-meta.xml
<CustomField>
    <fullName>TLS_NewLeaseNegotiationsEndedUnsuccessfu__c</fullName>
    <defaultValue>"New Lease Negotiations Ended Unsuccessfully"</defaultValue>
    <label>TLS NewLeaseNegotiationsEndedUnsuccessfu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>