Custom--app/main/default/objects/Status_Tags__c/fields/TLS_Prior_Lease_Accepted__c.field-meta.xml
<CustomField>
    <fullName>TLS_Prior_Lease_Accepted__c</fullName>
    <defaultValue>"Prior Lease Accepted"</defaultValue>
    <label>TLS Prior Lease Accepted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>